--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,7 +14,8 @@ $clrInputError: #e54369;
 $clrTextError: #CC123F;
 
 $headerHeight: 80px;
-$footerHeight: 80px;
+$footerHeight: 48px;
+$SocialLinksHeight: 48px;
 
 $containerWidth: 1680px;
 $containerMiniWidth: 995px;
