--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,13 +1,16 @@
-$clrBg1: #221B47;
-$clrBg2: #181235;
+$clrBg1: #1C1C1C;
+$clrBg2: #262626;
+$clrBg3: #E7FC6E;
 $clrBlue: #7B79F7;
 $clrText: #ffffff;
-$clrDisable: #48485C;
-$clrBlue2: #312570;
+$clrDisable: #353535;
+$clrDisableText: #8A8A8A;
+$clrBlue2: #262626;
 $clrBlue3: #3950A4;
 $clrBlue4: #56CCF2;
 $clrOrange: #F2994A;
 $clrYellow: #FED955;
+$clrGreen: #05D864;
 $clrBlue5: #716fe4;
 $clrNavHover: #807EFF;
 $clrInputError: #e54369;
